@@ -70,10 +70,12 @@ acceptance_tests(
           !$ENV{AUTHOR_TESTING} && !eval { require Net::IDN::Encode; 1 } ? 'idn-hostname.json' : (),
         ] },
       # various edge cases that are difficult to accomodate
+      { file => 'hostname.json', group_description => 'validation of host names', test_description => 'trailing dot' },
       { file => 'iri.json', group_description => 'validation of IRIs',  # see test suite issue 395
         test_description => 'an invalid IRI based on IPv6' },
       { file => 'idn-hostname.json',
-        group_description => 'validation of internationalized host names' }, # IDN decoder, Data::Validate::Domain both have issues
+        # IDN decoder, Data::Validate::Domain both have issues
+        group_description => [ 'validation of internationalized host names', 'validation of separators in internationalized host names' ] },
       { file => 'uri.json',
         test_description => 'validation of URIs',
         test_description => 'an invalid URI with comma in scheme' },  # Mojo::URL does not fully validate
